# jlog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
silver/jlog/: logger.cpp  logger.h
src/: logger.cpp  logger.h
tests/: CMakeLists.txt  constructors.cpp  file_logs.cpp  fixture.hpp  test_logger.cpp
